feat: fix issues and enhances devex
